deployment/dev/versions-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: servicetrips-version-cert
    haproxy.router.openshift.io/timeout: 60s
  creationTimestamp: null
  labels:
    zone: internal
  name: servicetrips-version-dev
spec:
  host: servicetrips-version.cloud-dev.orebroll.se
  path: /
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: servicetrips-version
    weight: null
status: {}
